Setup controller, services for client and server, repository for server service

--- a/WardrobeApp/WardrobeApp/appsettings.json
+++ b/WardrobeApp/WardrobeApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WardrobeContext": "Server=(localdb)\\mssqllocaldb;Database=WardrobeContext-08ae69e3-903b-4055-b2a7-616f6c39ceec;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
